--- a/index.css
+++ b/index.css
@@ -2,3 +2,15 @@ body {
     background-size: auto;
     background-position-x: center;
 }
+
+p, h2, a, div{
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(150, 190, 0);
+    text-decoration: none;
+    background-color: rgba(105, 105, 105, 0.8);
+    border-radius: 10px;
+    text-decoration: none;
+    margin-top: 5vh;
+    margin-left: 5vw;
+    margin-right: 5vw;
+}
