--- a/navbar.css
+++ b/navbar.css
@@ -9,6 +9,7 @@ ul.navbar li {
     min-width: 15vw; 
     background-color: dimgrey;
     opacity: 0.85;
+    border-radius: 3px;
 }
 
 ul.navbar li a {
