Főoldal bemutatás nélül

--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ div {
     text-align: center;
 }
 
-p, h2, a{
+p, h2{
     font-family: Arial, Helvetica, sans-serif;
     color: rgb(100, 210, 0);
     text-decoration: none;
