--- a/alakzatok.css
+++ b/alakzatok.css
@@ -14,6 +14,7 @@ div{
     margin-left: 5vw;
     margin-right: 5vw;
     text-align: center;
+    margin-bottom: 5vh;
     
 }
 
@@ -27,6 +28,10 @@ p, h1, a, img{
     text-align: center;
     margin-left: 5vw;
     margin-right: 5vw;
+    
+}
+p{
+    font-size: 115%;
 }
 
 img {
