--- a/letoltes.css
+++ b/letoltes.css
@@ -14,6 +14,7 @@ div{
     margin-left: 5vw;
     margin-right: 5vw;
     text-align: center;
+    margin-bottom: 5vh;
 }
 
 p, h2, a, img{
@@ -26,6 +27,11 @@ p, h2, a, img{
     text-align: center;
     margin-left: 5vw;
     margin-right: 5vw;
+    font-size: 115%;
+}
+
+p{
+    font-size: 115%;
 }
 
 img {
